deploy: aggiornamento sito 2026-02-18 12:06 - 21 file

--- a/ar/index.html
+++ b/ar/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>اجمع الكانجي.<br><span class="text-primary">كلها.</span></h1>
-                <p class="hero-subtitle">افتح الحزم، أكمل مجموعتك، وتعلم وأنت تستمتع. اختبارات ذكية، تحديات متعددة اللاعبين، أهداف يومية، ودروس تفاعلية. من المستوى المبتدئ حتى JLPT N1.</p>
+                <h1>احفظ الكانجي.<br><span class="text-primary">بدون إحباط.</span></h1>
+                <p class="hero-subtitle">تبدو كلعبة. تعمل كتدريب JLPT حقيقي — من N5 إلى N1. انضم إلى أكثر من 15,000 متعلم.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>تحميل مجاني</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>ابدأ الجمع مجانًا</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
