--- a/de/index.html
+++ b/de/index.html
@@ -204,10 +204,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Sammle Kanji.<br><span class="text-primary">Alle.</span></h1>
-                <p class="hero-subtitle">Oeffne Packungen, vervollstaendige deine Sammlung und lerne mit Spass. Intelligente Quizze, Multiplayer-Herausforderungen, taegliche Ziele und interaktive Lektionen. Vom Anfaenger-Level bis JLPT N1.</p>
+                <h1>Kanji merken.<br><span class="text-primary">Ohne Frust.</span></h1>
+                <p class="hero-subtitle">Fühlt sich an wie ein Spiel. Funktioniert wie echtes JLPT-Training — von N5 bis N1. Schließ dich 15.000+ Lernenden an.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Kostenlos laden</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Jetzt kostenlos sammeln</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
