--- a/es/index.html
+++ b/es/index.html
@@ -204,10 +204,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Colecciona los Kanji.<br><span class="text-primary">Todos.</span></h1>
-                <p class="hero-subtitle">Abre sobres, completa tu coleccion y aprende mientras te diviertes. Quizzes inteligentes, desafios multijugador, objetivos diarios y lecciones interactivas. Desde nivel principiante hasta JLPT N1.</p>
+                <h1>Recuerda los Kanji.<br><span class="text-primary">Sin frustración.</span></h1>
+                <p class="hero-subtitle">Parece un juego. Funciona como entrenamiento JLPT real — de N5 a N1. Únete a 15.000+ estudiantes.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Descargar gratis</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Empieza a coleccionar gratis</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
