--- a/fa/index.html
+++ b/fa/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>کانجی جمع کن.<br><span class="text-primary">همه‌شون رو.</span></h1>
-                <p class="hero-subtitle">پک‌ها رو باز کن، کالکشنت رو کامل کن و با تفریح یاد بگیر. کوئیزهای هوشمند، چالش‌های چندنفره، اهداف روزانه و درس‌های تعاملی. از سطح مبتدی تا JLPT N1.</p>
+                <h1>کانجی رو به خاطر بسپار.<br><span class="text-primary">بدون سرخوردگی.</span></h1>
+                <p class="hero-subtitle">مثل بازی سرگرم‌کننده‌ست. مثل تمرین واقعی JLPT کار می‌کنه — از N5 تا N1. به بیش از ۱۵٬۰۰۰ زبان‌آموز بپیوند.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>دانلود رایگان</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>رایگان شروع کن</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
