--- a/fil/index.html
+++ b/fil/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Kolektahin ang Kanji.<br><span class="text-primary">Lahat Sila.</span></h1>
-                <p class="hero-subtitle">Buksan ang mga packs, kumpletuhin ang koleksyon mo, at matuto habang naglalaro. Smart quizzes, multiplayer challenges, daily goals, at interactive lessons. Mula beginner level hanggang JLPT N1.</p>
+                <h1>Tandaan ang Kanji.<br><span class="text-primary">Walang frustration.</span></h1>
+                <p class="hero-subtitle">Parang laro ang dating. Epektibo tulad ng tunay na JLPT training — mula N5 hanggang N1. Sumali sa 15,000+ na nag-aaral.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>I-download Libre</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Magsimulang mangolekta nang libre</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
@@ -311,7 +311,7 @@
                         </svg>
                     </div>
                     <h3>Smart Quizzes na may SRS</h3>
-                    <p>8 iba't ibang quiz modes na may SM-2 algorithm. Bawat session ay nag-a-adapt sa level mo at ang SRS ay nagpapakita ng kanji sa optimal time para sa tunay na pag-memorize.</p>
+                    <p>9 iba't ibang quiz modes na may SM-2 algorithm. Bawat session ay nag-a-adapt sa level mo at ang SRS ay nagpapakita ng kanji sa optimal time para sa tunay na pag-memorize.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
