--- a/fr/index.html
+++ b/fr/index.html
@@ -204,10 +204,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Collectionne les Kanji.<br><span class="text-primary">Tous.</span></h1>
-                <p class="hero-subtitle">Ouvre des paquets, complete ta collection et apprends en t'amusant. Quiz intelligents, defis multijoueur, objectifs quotidiens et lecons interactives. Du niveau debutant jusqu'au JLPT N1.</p>
+                <h1>Retiens les Kanji.<br><span class="text-primary">Sans frustration.</span></h1>
+                <p class="hero-subtitle">On dirait un jeu. Mais c'est un vrai entraînement JLPT — de N5 à N1. Rejoins 15 000+ apprenants.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Telecharger gratuit</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Commence à collectionner gratuitement</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
