--- a/hi/index.html
+++ b/hi/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>कांजी इकट्ठा करो।<br><span class="text-primary">सब के सब।</span></h1>
-                <p class="hero-subtitle">पैक खोलो, अपना कलेक्शन पूरा करो, और मज़े से सीखो। स्मार्ट क्विज़, मल्टीप्लेयर चैलेंज, डेली गोल्स और इंटरैक्टिव लेसन। बिगिनर लेवल से JLPT N1 तक।</p>
+                <h1>कांजी याद करो।<br><span class="text-primary">बिना तनाव के।</span></h1>
+                <p class="hero-subtitle">गेम जैसा मज़ेदार। असली JLPT ट्रेनिंग जैसा असरदार — N5 से N1 तक। 15,000+ सीखने वालों से जुड़ो।</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>मुफ्त डाउनलोड</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>मुफ़्त में इकट्ठा करना शुरू करो</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
