--- a/id/index.html
+++ b/id/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Kumpulkan Kanji.<br><span class="text-primary">Semuanya.</span></h1>
-                <p class="hero-subtitle">Buka paket, lengkapi koleksimu, dan belajar sambil bersenang-senang. Kuis cerdas, tantangan multiplayer, target harian, dan pelajaran interaktif. Dari level pemula hingga JLPT N1.</p>
+                <h1>Ingat Kanji.<br><span class="text-primary">Tanpa frustrasi.</span></h1>
+                <p class="hero-subtitle">Serasa main game. Efektif seperti latihan JLPT sungguhan — dari N5 sampai N1. Bergabung dengan 15.000+ pelajar.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Unduh Gratis</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Mulai koleksi gratis</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
