--- a/index.html
+++ b/index.html
@@ -323,19 +323,17 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1>
-                        Collect Kanji.<br /><span class="text-primary"
-                            >All of Them.</span
+                        Remember Kanji.<br /><span class="text-primary"
+                            >Without the Frustration.</span
                         >
                     </h1>
                     <p class="hero-subtitle">
-                        Open packs, complete your collection, and learn while
-                        having fun. Smart quizzes, multiplayer challenges, daily
-                        goals, and interactive lessons. From beginner level to
-                        JLPT N1.
+                        Feels like a game. Works like real JLPT training
+                        — from N5 to N1. Join 15,000+ learners.
                     </p>
                     <div class="hero-cta">
                         <a href="#download" class="btn btn-primary btn-lg"
-                            ><strong>Download Free</strong></a
+                            ><strong>Start Collecting Free</strong></a
                         >
                     </div>
                     <div class="hero-stats">
@@ -501,7 +499,7 @@
                         </div>
                         <h3>Smart Quizzes with SRS</h3>
                         <p>
-                            8 different quiz modes with the SM-2 algorithm. Each
+                            9 different quiz modes with the SM-2 algorithm. Each
                             session adapts to your level and SRS presents kanji
                             at the optimal time for real memorization.
                         </p>
