--- a/it/index.html
+++ b/it/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Colleziona i Kanji.<br><span class="text-primary">Tutti.</span></h1>
-                <p class="hero-subtitle">Sbusta carte, completa la collezione e impara divertendoti. Quiz intelligenti, sfide multiplayer, obiettivi giornalieri e lezioni interattive. Dal livello base fino al JLPT N1.</p>
+                <h1>Ricorda i Kanji.<br><span class="text-primary">Senza frustrazione.</span></h1>
+                <p class="hero-subtitle">Sembra un gioco. Funziona come vero allenamento JLPT — da N5 a N1. Unisciti a 15.000+ studenti.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Scarica gratis</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Inizia a collezionare gratis</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
