--- a/ms/index.html
+++ b/ms/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Kumpul Kanji.<br><span class="text-primary">Semuanya.</span></h1>
-                <p class="hero-subtitle">Buka pek, lengkapkan koleksi kamu, dan belajar sambil berseronok. Kuiz pintar, cabaran berbilang pemain, matlamat harian, dan pelajaran interaktif. Dari tahap permulaan hingga JLPT N1.</p>
+                <h1>Ingat Kanji.<br><span class="text-primary">Tanpa tekanan.</span></h1>
+                <p class="hero-subtitle">Rasa macam game. Berkesan macam latihan JLPT sebenar — dari N5 hingga N1. Sertai 15,000+ pelajar.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Muat Turun Percuma</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Mula kumpul percuma</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
