--- a/pl/index.html
+++ b/pl/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Zbieraj kanji.<br><span class="text-primary">Wszystkie.</span></h1>
-                <p class="hero-subtitle">Otwieraj pakiety, uzupelniaj kolekcje i ucz sie, bawiC sie. Inteligentne quizy, wyzwania wieloosobowe, codzienne cele i interaktywne lekcje. Od poziomu poczatkujacego do JLPT N1.</p>
+                <h1>Zapamiętuj kanji.<br><span class="text-primary">Bez frustracji.</span></h1>
+                <p class="hero-subtitle">Wygląda jak gra. Działa jak prawdziwy trening JLPT — od N5 do N1. Dołącz do 15 000+ uczniów.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Pobierz za darmo</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Zacznij zbierać za darmo</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
@@ -311,7 +311,7 @@
                         </svg>
                     </div>
                     <h3>Inteligentne quizy z SRS</h3>
-                    <p>8 roznych trybow quizow z algorytmem SM-2. Kazda sesja dostosowuje sie do twojego poziomu, a SRS prezentuje kanji w optymalnym czasie dla prawdziwego zapamietywania.</p>
+                    <p>9 roznych trybow quizow z algorytmem SM-2. Kazda sesja dostosowuje sie do twojego poziomu, a SRS prezentuje kanji w optymalnym czasie dla prawdziwego zapamietywania.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
