--- a/pt/index.html
+++ b/pt/index.html
@@ -204,10 +204,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Coleciona os Kanji.<br><span class="text-primary">Todos.</span></h1>
-                <p class="hero-subtitle">Abre pacotes, completa a tua colecao e aprende enquanto te divertes. Quizzes inteligentes, desafios multijogador, objetivos diarios e licoes interativas. Do nivel iniciante ate ao JLPT N1.</p>
+                <h1>Memorize os Kanji.<br><span class="text-primary">Sem frustração.</span></h1>
+                <p class="hero-subtitle">Parece um jogo. Funciona como treino real para o JLPT — de N5 a N1. Junte-se a 15.000+ estudantes.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Baixar gratis</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Comece a colecionar grátis</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
