--- a/ru/index.html
+++ b/ru/index.html
@@ -204,10 +204,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Коллекционируй кандзи.<br><span class="text-primary">Все.</span></h1>
-                <p class="hero-subtitle">Открывай пакеты, собирай коллекцию и учись с удовольствием. Умные викторины, многопользовательские соревнования, ежедневные цели и интерактивные уроки. От начального уровня до JLPT N1.</p>
+                <h1>Запоминай кандзи.<br><span class="text-primary">Без мучений.</span></h1>
+                <p class="hero-subtitle">Похоже на игру. Работает как настоящая подготовка к JLPT — от N5 до N1. Присоединяйся к 15 000+ ученикам.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Скачать бесплатно</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Начни собирать бесплатно</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
