--- a/th/index.html
+++ b/th/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>สะสมคันจิ<br><span class="text-primary">ให้ครบทุกตัว</span></h1>
-                <p class="hero-subtitle">เปิดแพ็ค สะสมให้ครบคอลเลกชัน และเรียนไปพร้อมกับความสนุก แบบทดสอบอัจฉริยะ ท้าทายกับผู้เล่นคนอื่น เป้าหมายรายวัน และบทเรียนโต้ตอบ ตั้งแต่ระดับเริ่มต้นจนถึง JLPT N1</p>
+                <h1>จำคันจิได้.<br><span class="text-primary">ไม่ต้องทนหงุดหงิด.</span></h1>
+                <p class="hero-subtitle">สนุกเหมือนเกม ได้ผลเหมือนฝึก JLPT จริง — ตั้งแต่ N5 ถึง N1 มาร่วมกับผู้เรียน 15,000+ คน</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>ดาวน์โหลดฟรี</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>เริ่มสะสมฟรี</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
