--- a/tr/index.html
+++ b/tr/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Kanji Topla.<br><span class="text-primary">Hepsini.</span></h1>
-                <p class="hero-subtitle">Paketler ac, koleksiyonunu tamamla ve eglenerek ogren. Akilli testler, cok oyunculu meydan okumalar, gunluk hedefler ve interaktif dersler. Baslangic seviyesinden JLPT N1'e kadar.</p>
+                <h1>Kanjileri hatırla.<br><span class="text-primary">Stres olmadan.</span></h1>
+                <p class="hero-subtitle">Oyun gibi hissettiriyor. Gerçek JLPT antrenmanı gibi çalışıyor — N5'ten N1'e. 15.000+ öğrenciyle birlikte ol.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Ucretsiz Indir</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Ücretsiz toplamaya başla</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
