--- a/vi/index.html
+++ b/vi/index.html
@@ -204,10 +204,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Sưu tầm Kanji.<br><span class="text-primary">Tất cả.</span></h1>
-                <p class="hero-subtitle">Mở gói thẻ, hoàn thành bộ sưu tập, vừa chơi vừa học. Quiz thông minh, đấu đa người, mục tiêu hằng ngày và bài học tương tác. Từ người mới đến JLPT N1.</p>
+                <h1>Nhớ Kanji.<br><span class="text-primary">Không còn bực bội.</span></h1>
+                <p class="hero-subtitle">Vui như chơi game. Hiệu quả như luyện JLPT thật — từ N5 đến N1. Tham gia cùng 15.000+ người học.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>Tải miễn phí</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>Bắt đầu sưu tầm miễn phí</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
@@ -309,7 +309,7 @@
                         </svg>
                     </div>
                     <h3>Quiz thông minh SRS</h3>
-                    <p>8 chế độ quiz với thuật toán SM-2. Mỗi lần luyện tập điều chỉnh theo trình độ của bạn, SRS hiển thị Kanji vào thời điểm tối ưu để bạn thực sự ghi nhớ.</p>
+                    <p>9 chế độ quiz với thuật toán SM-2. Mỗi lần luyện tập điều chỉnh theo trình độ của bạn, SRS hiển thị Kanji vào thời điểm tối ưu để bạn thực sự ghi nhớ.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
