--- a/zh-tw/index.html
+++ b/zh-tw/index.html
@@ -206,10 +206,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>收集漢字。<br><span class="text-primary">全部收齊。</span></h1>
-                <p class="hero-subtitle">開卡包、完成收藏、邊玩邊學。智慧測驗、多人挑戰、每日目標和互動課程。從初學者到 JLPT N1。</p>
+                <h1>記住漢字。<br><span class="text-primary">告別挫敗感。</span></h1>
+                <p class="hero-subtitle">像遊戲一樣有趣，像真正的JLPT訓練一樣有效 — 從N5到N1。加入15,000+學習者的行列。</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>免費下載</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>免費開始收集</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
