--- a/zh/index.html
+++ b/zh/index.html
@@ -204,10 +204,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>收集汉字。<br><span class="text-primary">全部收齐。</span></h1>
-                <p class="hero-subtitle">开卡包、完成收藏、边玩边学。智能测验、多人挑战、每日目标和互动课程。从初学者到 JLPT N1。</p>
+                <h1>记住汉字。<br><span class="text-primary">告别挫败感。</span></h1>
+                <p class="hero-subtitle">像游戏一样有趣，像真正的JLPT训练一样有效 — 从N5到N1。加入15,000+学习者的行列。</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>免费下载</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>免费开始收集</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
