--- a/ko/index.html
+++ b/ko/index.html
@@ -204,10 +204,10 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>한자를 모아.<br><span class="text-primary">전부 다.</span></h1>
-                <p class="hero-subtitle">카드팩을 열고, 컬렉션을 완성하고, 놀면서 배워. 스마트 퀴즈, 멀티플레이어 배틀, 일일 목표, 인터랙티브 레슨. 초보부터 JLPT N1까지.</p>
+                <h1>한자를 기억하세요.<br><span class="text-primary">좌절 없이.</span></h1>
+                <p class="hero-subtitle">게임처럼 재미있고, 진짜 JLPT 훈련처럼 효과적 — N5부터 N1까지. 15,000명 이상의 학습자와 함께하세요.</p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-lg"><strong>무료 다운로드</strong></a>
+                    <a href="#download" class="btn btn-primary btn-lg"><strong>무료로 수집 시작</strong></a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
